[package]
name = "robot_stm32l433"
version = "0.1.0"
authors = ["cmetcalf"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"
incremental = false
lto = true
codegen-units = 1
opt-level = 0
debug = true
debug-assertions = true

[profile.release]
opt-level = 'z' # maximum optimization
debug = false
debug-assertions = false 

[dependencies]
cortex-m = "^0.6.3"
cortex-m-rt = "^0.6.12"
cortex-m-rtic = "0.5.5"
embedded-hal = "^0.2.4"
panic-halt = "^0.2.0" 
generic-array = "0.14.4"
heapless = "0.6.1"

servo_controller = { path = "../servo_controller" }

[dependencies.stm32l4xx-hal]
features = ["stm32l4x3", "rt"]
version = "^0.6.0"

