[package]
name = "robot_stm32l433"
version = "0.1.0"
authors = ["cmetcalf"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"
incremental = false
lto = true
codegen-units = 1
opt-level = 0
debug = true
debug-assertions = true

[profile.release]
opt-level = 'z' # maximum optimization
debug = false
debug-assertions = false 

[dependencies]
cortex-m = "0.7"
cortex-m-rtic = "1.0"
embedded-hal = "0.2"
panic-halt = "0.2" 
heapless = "0.7"
nb = "1"
embedded-hal-pwm-utilities = { git = "https://github.com/cyrusmetcalf/embedded-hal-pwm-utilities.git" }
systick-monotonic = "1.0.0"

[dependencies.stm32l4xx-hal]
features = ["stm32l4x3", "rt"]
version = "0.6"

